comment out tests and integration test